# sol_polygnn

./: .gitignore  README.md  example.py  pyproject.toml
sol_polygnn/: __init__.py  constants.py  featurize.py  layers.py  models.py  std_module.py  trimer.py  utils.py
sol_polygnn/diff/: diff.py
tests/: test_sol_polygnn.py
trained_models/solvent_class/metadata/: class_labels.txt  features.pkl  features.txt  hyperparams.txt  properties.txt  scalers.json  selectors.json
trained_models/solvent_class/models/: model_0.pt  model_1.pt  model_2.pt  model_3.pt  model_4.pt
